# Stratos

./: .env.example  .gitignore  CLAUDE.md  ENGINE.md  FOUNDATIONS.md  HARVEST.md  NOTICE  PROJECT_STATE.md  PROVENANCE.md  README.md  START_HERE.md  STRATEGY.md  package.json  pnpm-lock.yaml
apps/web/: .env.example  drizzle.config.ts  instrumentation.ts  middleware.ts  next.config.mjs  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  vercel.json  vitest.config.ts
apps/web/.storybook/: main.ts  preview.tsx
apps/web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/components/: posthog-provider.tsx
apps/web/lib/: audit.ts  config.ts  env.ts  rate-limit.ts  stripe.ts  utils.ts
docs/: SETUP_KEYS.md
docs/superpowers/plans/: 2026-05-24-design-system-v2.md  (+6 more)
engine/: .env.example  README.md  __init__.py  anomaly.py  catalog.py  commitment.py  fixtures.py  forecast.py  idle.py  main.py  models.py  pyproject.toml  requirements.txt  rightsizing.py  zombie.py
engine/tests/: test_anomaly.py  test_anomaly_integration.py  test_commitment.py  test_commitment_integration.py  test_forecast.py  test_health.py  test_idle.py  test_rightsizing.py  test_s3_integration.py  test_zombie.py
infra/aws/: README.md  stratos-readonly-role.json
integrations/: README.md
proof/: README.md  run_proof.py
proof/loaders/: azure.py  azure_v2.py
proof/results/: azure-v2-full-run.txt
scripts/: check-account-tier.mjs  install-engine.mjs  run-engine-test.mjs  run-engine.mjs  sync-env.mjs
(+243 files in other folders)
