[project]
name = "stratos-engine"
version = "0.0.0"
description = "Stratos analytical engine — the math (ENGINE.md)."
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]    # we use a higher line-length above; keep ruff aligned
